# membrane-invitations

./: Cargo.toml  README.md  default.nix  dev-setup.md  flake.nix  package-lock.json  package.json  rocket.config.js  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: main.yml
crates/coordinator/: Cargo.toml  README.md
crates/coordinator/src/: lib.rs
crates/coordinator/tests/: main_flow.rs
crates/integrity/: Cargo.toml  README.md
crates/integrity/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: lib.rs
crates/zome/: Cargo.toml  README.md
crates/zome/src/: lib.rs
crates/zome/tests/: main_flow.rs
docs/: index.md
docs/_assets/: webmanifest.json
docs/_assets/_static/: custom-elements.json
docs/_data/: site.cjs
docs/guides/: index.md
docs/guides/backend/: types.md  zome.md
docs/guides/frontend/: elements.md  membrane-invitations-service.md  membrane-invitations-store.md
docs/guides/setting-up/: adding-the-frontend.md  adding-the-zome.md
nix/: sources.json
src/: index.ts  membrane-invitations-service.ts  membrane-invitations-store.ts  types.ts
ui/: README.md  package-lock.json  package.json  tsconfig.json
ui/src/: membrane-invitations-client.ts  membrane-invitations-service.ts  membrane-invitations-store.ts  types.ts
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
