[workspace]
members = [
  "crates/coordinator",
  "crates/integrity",
  "crates/types",
]
resolver = "2"

[workspace.dependencies]
hdi = "0.2.0-beta-rc.1"
hdk = "0.1.0-beta-rc.1"
serde = "1"
holochain = "0.1.0-beta-rc.2"
fixt = "0.1.0-beta-rc.0"

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
