[workspace]
members = ["crates/coordinator", "crates/integrity"]
resolver = "2"

[workspace.dependencies]
hdi = { version = "=0.4.0-beta-dev.17" }
hdk = { version = "=0.3.0-beta-dev.21" }
serde = "=1.0.171"
holochain = {version = "=0.3.0-beta-dev.26"}

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
