[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "MembraneInvitations zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/membrane_invitations"
edition = "2021"
homepage = "https://docs.rs/hc_zome_membrane_invitations"
license = "MIT"
name = "hc_zome_membrane_invitations_coordinator"
repository = "https://github.com/holochain-open-dev/membrane_invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_membrane_invitations_coordinator"

[dependencies]
derive_more = "0"
serde = "1"

hc_zome_membrane_invitations_integrity = { path = "../integrity"}
hc_zome_membrane_invitations_types = {path = "../types"}
hdk = {version = "0.0.152", features = ["encoding"]}

[dev-dependencies]
fixt = "0.0.14"
futures = {version = "0.3.1", default-features = false}
hdk = {version = "0.0.152", features = ["encoding", "test_utils"]}
holochain = {version = "0.0.162", default-features = false, features = ["test_utils"]}
tokio = {version = "1.3", features = ["full"]}
