[package]
authors = ["guillem.cordoba@gmail.com", "eric@harris-braun.com", "tatsuya.g.sato@yumeville.com"]
description = "MembraneInvitations zome for any Holochain app"
documentation = "https://holochain-open-dev.github.io/membrane_invitations"
edition = "2021"
homepage = "https://docs.rs/hc_zome_membrane_invitations"
license = "MIT"
name = "hc_zome_membrane_invitations_integrity"
repository = "https://github.com/holochain-open-dev/membrane_invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "hc_zome_membrane_invitations_integrity"

[dependencies]
derive_more = "0"
serde = "1"

hc_zome_membrane_invitations_types = {path = "../types"}
hdi = "0.1.2"
